# linuxdays24

./: MANIFEST.in  README  README.md  pyproject.toml  setup.py
docs/: conf.py  index.rst
linuxdays24-presentation/: plot.py  reference.py  solution.py
src/: ldpymod.c  ldpymod.h  object.c  object.h
tests/: test_ldpymod.py
